<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_registrierenCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrierenFragment"
    android:background="@color/futuristic_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/errorRegisterCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/futuristic_background"
        android:textColor="@color/futuristic_text"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrierenATB"
        app:strokeColor="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registerErrorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/text_register_errorA"
                android:textColor="@color/futuristic_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registerErrorBTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/text_register_errorB"
                android:textColor="@color/futuristic_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerErrorTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrierenATB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C3E50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backArrowIBT"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:background="@drawable/stroke_a"
            android:contentDescription="@string/description_imageButton_back"
            android:src="@drawable/baseline_arrow_back_24" />
        
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/registerCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/futuristic_background"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrierenATB"
        app:strokeColor="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_register"
                android:textColor="@color/futuristic_text"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameRegisterTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:boxStrokeColor="@color/futuristic_text"
                app:hintTextColor="@color/futuristic_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTV"
                app:startIconDrawable="@drawable/baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameRegisterTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_username"
                    android:textColor="@color/futuristic_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailRegisterTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:boxStrokeColor="@color/futuristic_text"
                app:hintTextColor="@color/futuristic_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameRegisterTIF"
                app:startIconDrawable="@drawable/baseline_mail_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRegisterTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_email"
                    android:textColor="@color/futuristic_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwortRegisterTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:boxStrokeColor="@color/futuristic_text"
                app:hintTextColor="@color/futuristic_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailRegisterTIF"
                app:startIconDrawable="@drawable/baseline_security_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwortRegisterTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_password"
                    android:textColor="@color/futuristic_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwortConfirmRegisterTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:boxStrokeColor="@color/futuristic_text"
                app:hintTextColor="@color/futuristic_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwortRegisterTIF"
                app:startIconDrawable="@drawable/baseline_lock_open_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwortConfirmRegisterTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_register_passwordConfirm"
                    android:textColor="@color/futuristic_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerBTN"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/futuristic_primaryButton"
                android:text="@string/button_register"
                android:contentDescription="@string/description_register"
                android:textColor="@color/futuristic_text"
                app:layout_constraintEnd_toEndOf="@+id/passwortConfirmRegisterTIF"
                app:layout_constraintStart_toStartOf="@+id/passwortConfirmRegisterTIF"
                app:layout_constraintTop_toBottomOf="@+id/passwortConfirmRegisterTIF" />

            <TextView
                android:id="@+id/registerQuestionAccountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_register_question"
                android:textColor="@color/futuristic_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/registerBTN"
                app:layout_constraintStart_toStartOf="@+id/registerBTN"
                app:layout_constraintTop_toBottomOf="@+id/registerBTN" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>